--- a/API-Projects/Todoist-and-Notion-2-Way-Integration/package.json
+++ b/API-Projects/Todoist-and-Notion-2-Way-Integration/package.json
@@ -6,5 +6,15 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9"
-  }
+  },
+  "name": "todoist-and-notion-2-way-integration",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./scripts/dist/script.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
