--- a/Typescript-Projects/Data-Structures/LAB4-HEAP/package.json
+++ b/Typescript-Projects/Data-Structures/LAB4-HEAP/package.json
@@ -18,6 +18,7 @@
     "test-mergeSort": "node ./build/algorithms/merge-sort.js",
     "test-heap": "node ./build/adts/minHeap.js",
     "test-heapSort": "node ./build/algorithms/heapSort.js",
+    "test-heapSortTest": "node ./build/heapSortTest.js",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -27,8 +28,12 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
+    "@types/convert-array-to-csv": "^2.0.0",
+    "@types/node": "^14.11.2",
     "gts": "^3.1.1",
-    "typescript": "~4.7.0",
-    "@types/node": "^14.11.2"
+    "typescript": "~4.7.0"
+  },
+  "dependencies": {
+    "convert-array-to-csv": "^2.0.0"
   }
 }
