--- a/Typescript-Projects/Data-Structures/LAB4-HEAP/package.json
+++ b/Typescript-Projects/Data-Structures/LAB4-HEAP/package.json
@@ -17,8 +17,10 @@
     "test-quick": "node ./build/algorithms/quick-sort.js",
     "test-mergeSort": "node ./build/algorithms/merge-sort.js",
     "test-heap": "node ./build/adts/minHeap.js",
-    "test-heapSort": "node ./build/algorithms/heapSort.js",
+    "test-heapSort": "node ./build/testArrays.js",
     "test-heapSortTest": "node ./build/heapSortTest.js",
+    "generate-test": "node ./build/algorithms/Experimental-Efficiency-Test/testArrayGenerator.js",
+    "experiment": "node ./build/algorithms/Experimental-Efficiency-Test/testingFile.js",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
