modified:   Typescript-Projects/Data-Structures-Algorithms/package.json

--- a/Typescript-Projects/Data-Structures-Algorithms/package.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "data-structures-algorithms",
   "version": "0.0.0",
   "description": "",
   "main": "build/src/index.js",
