--- a/Typescript-Projects/Data-Structures-Algorithms/tsconfig.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "outDir": "/build",
-    "resolveJsonModule": true,
+    "outDir": "build",
+    "resolveJsonModule": true
   },
+  "exclude": [
+    "build",
+  ]
 }
