--- a/Typescript-Projects/Data-Structures-Algorithms/package.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/package.json
@@ -14,11 +14,10 @@
     "test-quick": "node ./build/algorithms/quick-sort.js",
     "test-mergeSort": "node ./build/algorithms/merge-sort.js",
     "test-heap": "node ./build/adts/minHeap.js",
-    "test-heapSort": "node ./build/testArrays.js",
-    "test-heapSortTest": "node ./build/heapSortTest.js",
+    "test-priority": "node ./build/Library/adts/priorityQueue.js",
+    "test-lab4Arrays": "node ./build/Lab-assignments/Lab-4/testArrays.js",
     "generate-test": "node ./build/algorithms/Experimental-Efficiency-Test/testArrayGenerator.js",
     "experiment": "node ./build/algorithms/Experimental-Efficiency-Test/testingFile.js",
-    "test-pq": "node ./build/Library/adts/priorityQueue.js",
     "test-bucket": "node ./build/Library/algorithms/bucket-sort.js",
     "lint": "gts lint",
     "clean": "gts clean",
