--- a/Typescript-Projects/Data-Structures-Algorithms/package.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/package.json
@@ -16,6 +16,7 @@
     "test-heap": "node ./build/adts/minHeap.js",
     "test-priority": "node ./build/Library/adts/priorityQueue.js",
     "test-lab4Arrays": "node ./build/Lab-assignments/Lab-4/testArrays.js",
+    "test-lab4Experiment": "node ./build/Lab-assignments/Lab-4/Experimental-Efficiency-Test/testingFile.js",
     "generate-test": "node ./build/algorithms/Experimental-Efficiency-Test/testArrayGenerator.js",
     "experiment": "node ./build/algorithms/Experimental-Efficiency-Test/testingFile.js",
     "test-bucket": "node ./build/Library/algorithms/bucket-sort.js",
