modified:   Typescript-Projects/Data-Structures-Algorithms/Library/algorithms/bucket-sort.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/Library/algorithms/heap-sort.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/algorithms/bucket-sort.js 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/algorithms/heap-sort.js 	modified:   Typescript-Projects/Data-Structures-Algorithms/package.json

--- a/Typescript-Projects/Data-Structures-Algorithms/package.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/package.json
@@ -15,11 +15,12 @@
     "test-mergeSort": "node ./build/algorithms/merge-sort.js",
     "test-heap": "node ./build/adts/minHeap.js",
     "test-priority": "node ./build/Library/adts/priorityQueue.js",
+    "test-bucketSort": "node ./build/Library/algorithms/bucket-sort.js",
+    "test-heapSort": "node ./build/Library/algorithms/heap-sort.js",
     "test-lab4Arrays": "node ./build/Lab-assignments/Lab-4/testArrays.js",
     "test-lab4Experiment": "node ./build/Lab-assignments/Lab-4/Experimental-Efficiency-Test/testingFile.js",
     "generate-test": "node ./build/algorithms/Experimental-Efficiency-Test/testArrayGenerator.js",
     "experiment": "node ./build/algorithms/Experimental-Efficiency-Test/testingFile.js",
-    "test-bucket": "node ./build/Library/algorithms/bucket-sort.js",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
