new file:   Typescript-Projects/3-sum/build/3sum.js 	new file:   Typescript-Projects/3-sum/build/divide.js 	new file:   Typescript-Projects/3-sum/build/sudoku.js 	new file:   Typescript-Projects/3-sum/build/weight.js 	modified:   Typescript-Projects/3-sum/package.json 	new file:   Typescript-Projects/3-sum/src/3sum.ts 	new file:   Typescript-Projects/3-sum/src/divide.ts 	renamed:    Typescript-Projects/3-sum/src/index.ts -> Typescript-Projects/3-sum/src/sudoku.ts 	new file:   Typescript-Projects/3-sum/src/weight.ts 	renamed:    Typescript-Projects/Data-Structures-Algorithms/Library/adts/arrayMinHeap.ts -> Typescript-Projects/Data-Structures-Algorithms/Library/adts/heap.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/Library/algorithms/heap-sort.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/adts/arrayMinHeap.d.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/adts/arrayMinHeap.js 	new file:   Typescript-Projects/Data-Structures-Algorithms/build/Library/adts/heap.d.ts 	new file:   Typescript-Projects/Data-Structures-Algorithms/build/Library/adts/heap.js 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/algorithms/heap-sort.d.ts 	modified:   Typescript-Projects/Data-Structures-Algorithms/build/Library/algorithms/heap-sort.js 	modified:   Typescript-Projects/Data-Structures-Algorithms/package.json

--- a/Typescript-Projects/3-sum/package.json
+++ b/Typescript-Projects/3-sum/package.json
@@ -10,7 +10,7 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "test": "node ./build/index.js",
+    "test": "node ./build/weight.js",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
