--- a/Typescript-Projects/Data-Structures-Algorithms/package.json
+++ b/Typescript-Projects/Data-Structures-Algorithms/package.json
@@ -21,6 +21,7 @@
     "test-lab4Experiment": "node ./build/Lab-assignments/Lab-4/Experimental-Efficiency-Test/testingFile.js",
     "test-search": "node ./build/Library/algorithms/binary-search.js",
     "test-hash": "node ./build/Library/adts/hashTable.js",
+    "test-BST": "node ./build/Library/adts/binarySearchTree.js",
     "generate-test": "node ./build/algorithms/Experimental-Efficiency-Test/testArrayGenerator.js",
     "experiment": "node ./build/algorithms/Experimental-Efficiency-Test/testingFile.js",
     "lint": "gts lint",
